--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Modern Ecommerce</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="Index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
 <body>
     <nav>
@@ -15,7 +15,7 @@
                 <i class="fas fa-bars"></i>
             </div>
             <div class="nav-links">
-                <a href="Index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="Contact.html">Contact</a>
                 
 
