--- a/Index/Mens.html
+++ b/Index/Mens.html
@@ -15,7 +15,7 @@
                 <i class="fas fa-bars"></i>
             </div>
             <div class="nav-links">
-                <a href="../Index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="../Contact.html">Contact</a>
                 
 
