--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
                 <i class="fas fa-bars"></i>
             </div>
             <div class="nav-links">
-                <a href="Index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="Contact.html" aria-current="page">Contact</a>
             </div>
         </div>
