--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
         </div>
         <div class="home-image">
-            <img src="/img/women-trying-clothes-store_23-2148915567.jpg" alt="Fashion Collection">
+            <img src="img/women-trying-clothes-store_23-2148915567.jpg" alt="Fashion Collection">
         </div>
     </section>
 
@@ -62,7 +62,7 @@
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/img/Woman-Fashion-Pure-White-Sneakers-Casual-Lace-up-Flat-Shoes-Low-Top-for-Female-8_3ccd541b-ce4b-4fd3-90c6-b2bef62f8709.146fe0b421a476ac67fa7fc7e07a54e3.jpeg" alt="Product 1">
+                    <img src="img/Woman-Fashion-Pure-White-Sneakers-Casual-Lace-up-Flat-Shoes-Low-Top-for-Female-8_3ccd541b-ce4b-4fd3-90c6-b2bef62f8709.146fe0b421a476ac67fa7fc7e07a54e3.jpeg" alt="Product 1">
                     <span class="product-tag">New</span>
                 </div>
                 <div class="product-details">
@@ -76,7 +76,7 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/img/Snapseed_2_590x.jpg" alt="Product 2">
+                    <img src="img/Snapseed_2_590x.jpg" alt="Product 2">
                     <span class="product-tag">Sale</span>
                 </div>
                 <div class="product-details">
@@ -90,7 +90,7 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/img/sg-11134201-22100-d38mysxdpyiv6e@resize_w450_nl.webp" alt="Product 3">
+                    <img src="img/sg-11134201-22100-d38mysxdpyiv6e@resize_w450_nl.webp" alt="Product 3">
                     <span class="product-tag">Popular</span>
                 </div>
                 <div class="product-details">
@@ -104,7 +104,7 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/img/71rmxZhoirL._SS400_.jpg" alt="Product 4">
+                    <img src="img/71rmxZhoirL._SS400_.jpg" alt="Product 4">
                 </div>
                 <div class="product-details">
                     <h3 class="product-name">Smart Watch</h3>
@@ -132,7 +132,7 @@
             <!-- Category 1 -->
             <div class="category-card">
                 <div class="category-image">
-                    <img src="/img/17a6105ee57ef1387b34c7a8569193bd.jpg" alt="Men's Fashion">
+                    <img src="img/17a6105ee57ef1387b34c7a8569193bd.jpg" alt="Men's Fashion">
                 </div>
                 <div class="category-overlay">
                     <h3 class="category-name">Men's Fashion</h3>
@@ -144,7 +144,7 @@
             <!-- Category 2 -->
             <div class="category-card">
                 <div class="category-image">
-                    <img src="/img/GettyImages-2117544782-a48b916b48854f3a8e459745b34fbf4e.jpg" alt="Women's Fashion">
+                    <img src="img/GettyImages-2117544782-a48b916b48854f3a8e459745b34fbf4e.jpg" alt="Women's Fashion">
                 </div>
                 <div class="category-overlay">
                     <h3 class="category-name">Women's Fashion</h3>
@@ -156,7 +156,7 @@
             <!-- Category 3 -->
             <div class="category-card">
                 <div class="category-image">
-                    <img src="/img/1627627690637.jpg" alt="Accessories">
+                    <img src="img/1627627690637.jpg" alt="Accessories">
                 </div>
                 <div class="category-overlay">
                     <h3 class="category-name">Accessories</h3>
@@ -168,7 +168,7 @@
             <!-- Category 4 -->
             <div class="category-card">
                 <div class="category-image">
-                    <img src="/img/crop-1000_F_894119720_SaWbEyPHMZ0hYdYvxhhOROmLKGF5d9Sz.jpg" alt="Footwear">
+                    <img src="img/crop-1000_F_894119720_SaWbEyPHMZ0hYdYvxhhOROmLKGF5d9Sz.jpg" alt="Footwear">
                 </div>
                 <div class="category-overlay">
                     <h3 class="category-name">Footwear</h3>
@@ -187,7 +187,7 @@
     <section class="about">
         <div class="about-container">
             <div class="about-image">
-                <img src="/img/TAV_MerchantsOnLong_CapeTown_WesternCape_SouthAfrica_01_.jpg" alt="About Our Store">
+                <img src="img/TAV_MerchantsOnLong_CapeTown_WesternCape_SouthAfrica_01_.jpg" alt="About Our Store">
                 <div class="experience-badge">
                     <span>15+</span>
                     <span>Years of Excellence</span>
