--- a/Index/Accessories.html
+++ b/Index/Accessories.html
@@ -55,7 +55,7 @@
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/SPB457J1_3000x.png" alt="Product 1">
+                    <img src="./img/SPB457J1_3000x.png" alt="Product 1">
                     <span class="product-tag">New</span>
                 </div>
                 <div class="product-details">
@@ -70,7 +70,7 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/41VexUb+H8S._SS400_.jpg" alt="Product 2">
+                    <img src="./img/41VexUb+H8S._SS400_.jpg" alt="Product 2">
                     <span class="product-tag">Sale</span>
                 </div>
                 <div class="product-details">
@@ -84,7 +84,7 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/123832-1-pear-shaped-drop-diamond-halo-riviera-necklace.jpg" alt="Product 3">
+                    <img src="./img/123832-1-pear-shaped-drop-diamond-halo-riviera-necklace.jpg" alt="Product 3">
                     <span class="product-tag">Popular</span>
                 </div>
                 <div class="product-details">
@@ -98,7 +98,7 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/71rmxZhoirL._SS400_.jpg" alt="Product 4">
+                    <img src="./img/71rmxZhoirL._SS400_.jpg" alt="Product 4">
                 </div>
                 <div class="product-details">
                     <h3 class="product-name">Smart Watch</h3>
