--- a/Index/Footwear.html
+++ b/Index/Footwear.html
@@ -51,7 +51,7 @@
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/Woman-Fashion-Pure-White-Sneakers-Casual-Lace-up-Flat-Shoes-Low-Top-for-Female-8_3ccd541b-ce4b-4fd3-90c6-b2bef62f8709.146fe0b421a476ac67fa7fc7e07a54e3.jpeg" alt="Product 1">
+                    <img src="../img/Woman-Fashion-Pure-White-Sneakers-Casual-Lace-up-Flat-Shoes-Low-Top-for-Female-8_3ccd541b-ce4b-4fd3-90c6-b2bef62f8709.146fe0b421a476ac67fa7fc7e07a54e3.jpeg" alt="Product 1">
                     <span class="product-tag">New</span>
                 </div>
                 <div class="product-details">
@@ -65,7 +65,7 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/shopping.webp" alt="Product 2">
+                    <img src="../img/shopping.webp" alt="Product 2">
                     <span class="product-tag">Sale</span>
                 </div>
                 <div class="product-details">
@@ -79,7 +79,7 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/sshopping.webp" alt="Product 3">
+                    <img src="../img/sshopping.webp" alt="Product 3">
                     <span class="product-tag">Popular</span>
                 </div>
                 <div class="product-details">
@@ -93,7 +93,7 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/ssshopping.webp" alt="Product 4">
+                    <img src="../img/ssshopping.webp" alt="Product 4">
                 </div>
                 <div class="product-details">
                     <h3 class="product-name">Girls High Heel Shoes Sequined Spring And Autumn Medium And Large Children Princess Sandals</h3>
