--- a/Index/Mens.html
+++ b/Index/Mens.html
@@ -51,7 +51,7 @@
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/61wRW+KEUtL._AC_UL1500_.jpg"  height="30%"   alt="Product 1">
+                    <img src="../img/61wRW+KEUtL._AC_UL1500_.jpg"  height="30%"   alt="Product 1">
                     <span class="product-tag">New</span>
                 </div>
                 <div class="product-details">
@@ -65,7 +65,7 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/61m5DCi2-oL._SS400_.jpg" alt="Product 2">
+                    <img src="../img/61m5DCi2-oL._SS400_.jpg" alt="Product 2">
                     <span class="product-tag">Sale</span>
                 </div>
                 <div class="product-details">
@@ -79,7 +79,7 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/6698cc188233ab5ded219dab-men-39-s-3-piece-slim-fit-suit-set-two.jpg" alt="Product 3">
+                    <img src="../img/6698cc188233ab5ded219dab-men-39-s-3-piece-slim-fit-suit-set-two.jpg" alt="Product 3">
                     <span class="product-tag">Popular</span>
                 </div>
                 <div class="product-details">
@@ -94,7 +94,7 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/71ZYjOZ3lWL._SS400_.jpg" alt="Product 4">
+                    <img src="../img/71ZYjOZ3lWL._SS400_.jpg" alt="Product 4">
                 </div>
                 <div class="product-details">
                     <h3 class="product-name">Men's Slim Fit 3 Piece Suit Two Button Business Wedding Dress Tux Suit Set Jacket Vest Pants with Tie</h3>
