--- a/Index/Women.html
+++ b/Index/Women.html
@@ -51,7 +51,7 @@
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/1021-07-2608_57_17.385_0800.jpg" alt="Product 1">
+                    <img src="../img/1021-07-2608_57_17.385_0800.jpg" alt="Product 1">
                     <span class="product-tag">New</span>
                 </div>
                 <div class="product-details">
@@ -66,7 +66,7 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/12022-07-2813_32_35.038_0800_1100x.jpg" alt="Product 2">
+                    <img src="../img/12022-07-2813_32_35.038_0800_1100x.jpg" alt="Product 2">
                     <span class="product-tag">Sale</span>
                 </div>
                 <div class="product-details">
@@ -80,7 +80,7 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/1234021-07-2609_34_03.171_0800_7e9d33c6-9cc0-4c20-b065-2b9b95c0bd42.jpg" alt="Product 3">
+                    <img src="../img/1234021-07-2609_34_03.171_0800_7e9d33c6-9cc0-4c20-b065-2b9b95c0bd42.jpg" alt="Product 3">
                     <span class="product-tag">Popular</span>
                 </div>
                 <div class="product-details">
@@ -95,7 +95,7 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/Facetune_09-10-2023-17-24-46.jpg" alt="Product 4">
+                    <img src="../img/Facetune_09-10-2023-17-24-46.jpg" alt="Product 4">
                 </div>
                 <div class="product-details">
                     <h3 class="product-name">Vivi Twist Cowl-Neck Midi Dress</h3>
